# tunitas-butano

./: Code-of-Conduct.md  Makefile.am  PACKAGES.md  README.md  buildconf  configure.ac
lib/: libtunitas-butano-generation.am  libtunitas-butano-tcf.am  libtunitas-butano.am
maintenance/: e2e  nearby  v2
noinst/lib/: libapp-dump-base64.am  libapp-dump-iab.am  libapp-random-base64.am  libapp-random-iab.am  libapp-vanity-iab.am  libapp.am  libtunitas-butano-generation.am  libtunitas-butano-tcf.am  libtunitas-butano.am  libwant.am
src/app/: Argv.xcpp  Makefrag.am  Quitting.xcpp  exception.Quitting.xcpp  grammar.A_Noun.xcpp  grammar.a_noun.xcpp  namespace.xcpp
src/app/argv/: Object.xcpp  among.xcpp  detail.Among.xcpp  namespace.xcpp
src/app/argv/parser/: Basis.xcpp  Demonstrator.xcpp  Dumper.xcpp  Howmany.access.format.Options.xcpp  Howmany.xcpp  Sloppy.xcpp  Unit.xcpp  format.Aspect.xcpp  format.Options.xcpp  howmany.Residual.xcpp  ignore.Aspect.xcpp  namespace.xcpp  prattle.Aspect.xcpp  prattle.Options.xcpp  residual.Aspect.xcpp  residual.Words.xcpp
src/app/dump/: Makefrag.am  main.xcpp  namespace.xcpp  options.xcpp
src/app/dump_base64/: Makefrag.am  c.main.xcpp  main.xcpp  namespace.xcpp  options.xcpp
src/app/dump_iab/: Makefrag.am  c.main.xcpp  main.xcpp  namespace.xcpp  options.xcpp
src/app/random_base64/: Makefrag.am  c.main.xcpp  main.xcpp  namespace.xcpp  options.xcpp
src/app/random_iab/: Makefrag.am  c.main.xcpp  main.xcpp  namespace.xcpp  options.xcpp
src/app/vanity_iab/: Builder.Shaver.xcpp  Builder.xcpp  Makefrag.am  c.main.xcpp  main.xcpp  namespace.xcpp  options.Parser.access.format.Options.xcpp  options.Parser.xcpp  options.xcpp
src/generation/: Enum.xcpp  Makefrag.am  Point.xcpp  base64.Distribution.xcpp  base64.Generator.xcpp  namespace.xcpp  randomness.ALL.xcpp  randomness.Distribution.Encoding.xcpp  randomness.Distribution.bool.xcpp  randomness.Distribution.declaration.xcpp  randomness.Distribution.template.xcpp  randomness.Distribution.vector.bool.xcpp  randomness.Distribution.xcpp  randomness.Engine.xcpp  randomness.Generator.xcpp  randomness.distribution.ALL.xcpp  randomness.distribution.Implementation.Encoding.xcpp  randomness.distribution.Implementation.Enumlike.xcpp  randomness.distribution.Implementation.Point.xcpp  randomness.distribution.Implementation.bool.xcpp  randomness.distribution.Implementation.byte.xcpp  randomness.distribution.Implementation.declaration.xcpp  randomness.distribution.Implementation.enum.xcpp  randomness.distribution.Implementation.integer.ALL.xcpp  randomness.distribution.Implementation.pair.xcpp  randomness.distribution.Implementation.vector.bool.xcpp  randomness.distribution.Implementation.vector.byte.xcpp  randomness.distribution.Implementation.xcpp  randomness.limits.ALL.xcpp  randomness.limits.time.Span.xcpp  randomness.limits.time.detail.Thenable.xcpp  randomness.limits.time.xcpp  required.tcf.Consent.xcpp  tcf.Distribution.xcpp  tcf.Generator.Object.xcpp  tcf.Generator.String.xcpp  tcf.Generator.declaration.xcpp  tcf.Generator.xcpp  tcf.distribution.Basis.xcpp  tcf.distribution.fields.ALL.xcpp
src/tests/unit/: Makefrag.am  butano.Fixture.xcpp  detail.Printable.xcpp  generation.Fixture.xcpp  main.xcpp  namespace.xcpp  printable.xcpp  randomness.Fixture.xcpp  tcf.Fixture.xcpp  want.Fixture.xcpp
src/tunitas/butano/: Makefrag.am  Version.xcpp  namespace.xcpp
src/tunitas/butano/generation/: Enum.xcpp  Makefrag.am  Point.xcpp  base64.Distribution.xcpp  base64.Generator.xcpp  namespace.xcpp  randomness.ALL.xcpp  randomness.Distribution.template.xcpp  (+19 more)
src/want/: Makefrag.am  namespace.xcpp
src/want/javalike/: ALL.xcpp  Boolean.xcpp  Date.xcpp  List.xcpp  Map.xcpp  Optional.xcpp  String.xcpp  Time.xcpp  detail.Integral.xcpp  detail.Numerize.xcpp  integer.Enum.xcpp  integer.Signed.xcpp  integer.Unsigned.xcpp  namespace.xcpp
src/want/lite/: namespace.xcpp
src/want/timeline/: ALL.xcpp  clock.ALL.xcpp  duration.ALL.xcpp  namespace.xcpp  point.ALL.xcpp
tests/: Makefrag.am
tests/dump/: Makefrag.am  option.V.test  option.dry-run.test  option.dryrun.test  option.q.test  option.quiet.test  option.verbose.test  option.warnings.test  rigging.sh
tests/dump-base64/: Makefrag.am  option.d.test  option.version.test  option.w.test  option.warning.test  rigging.sh
tests/dump-iab/: Makefrag.am  rigging.sh
tests/random-base64/: Makefrag.am  option.v.test  rigging.sh  run.01.test
tests/random-iab/: Makefrag.am  option.COUNT.00.test  option.COUNT.01.test  option.COUNT.03.test  option.f-dump.test  option.f-native.test  option.f-raw.test  option.format-dump.test  option.format-native.test  option.format-raw.test  option.s-SEED.test  option.seed-SEED.test  rigging.sh  run.02.test
tests/unit/: Makefrag.am  rigging.sh
tests/vanity-iab/: Makefrag.am  rigging.sh  run.01.test  run.02.test  run.03.test
(+136 files in other folders)
